fixing broken style

--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -10,3 +10,7 @@ body {
   top: 45px;
   bottom: 0;
 }
+
+.openseadragon-canvas canvas {
+    background: black !important;
+}
